# CommerceAI-OS

./: .editorconfig  .env.example  .gitignore  README.md
CommerceAI-OS/apps/api/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
CommerceAI-OS/apps/api/alembic/: env.py
CommerceAI-OS/apps/api/alembic/versions/: 20260716_0004_marketplace_tables.py
CommerceAI-OS/apps/api/docs/database/: BEST_PRACTICES.md  MIGRATIONS.md
CommerceAI-OS/apps/api/docs/identity/: AUTHENTICATION.md  README.md
CommerceAI-OS/apps/api/docs/marketplaces/: OAUTH.md
CommerceAI-OS/apps/api/docs/tenancy/: MEMBERSHIPS.md  TENANT_ISOLATION.md
CommerceAI-OS/apps/api/src/app/: __init__.py  main.py
CommerceAI-OS/apps/api/src/app/application/dto/: __init__.py
CommerceAI-OS/apps/api/src/app/application/identity/: __init__.py  auth_service.py  authorization.py
CommerceAI-OS/apps/api/src/app/core/di/: container.py
CommerceAI-OS/apps/api/src/app/core/events/: bus.py
CommerceAI-OS/apps/api/src/app/core/tenancy/: __init__.py  context.py
CommerceAI-OS/apps/api/src/app/domain/common/: __init__.py
CommerceAI-OS/apps/api/src/app/domain/identity/: permissions.py
CommerceAI-OS/apps/api/src/app/domain/marketplaces/: channels.py
CommerceAI-OS/apps/api/src/app/domain/tenancy/: enums.py
CommerceAI-OS/apps/api/src/app/infrastructure/: __init__.py
CommerceAI-OS/apps/api/src/app/infrastructure/cache/: __init__.py
CommerceAI-OS/apps/api/src/app/infrastructure/database/: base.py  caching.py  utils.py
CommerceAI-OS/apps/api/src/app/infrastructure/logging/: __init__.py
CommerceAI-OS/apps/api/src/app/infrastructure/marketplace/: base.py
CommerceAI-OS/apps/api/src/app/presentation/: __init__.py
CommerceAI-OS/apps/api/src/app/tasks/: health.py
CommerceAI-OS/apps/api/src/app/workers/: __init__.py
CommerceAI-OS/apps/api/tests/integration/marketplaces/: test_marketplace_api.py
CommerceAI-OS/apps/api/tests/integration/tenancy/: test_tenancy_api.py
CommerceAI-OS/apps/api/tests/unit/: test_event_bus.py  test_health.py
CommerceAI-OS/apps/api/tests/unit/identity/: test_jwt.py
CommerceAI-OS/apps/api/tests/unit/marketplaces/: test_ebay_oauth_url.py
CommerceAI-OS/apps/api/tests/unit/tenancy/: test_slug_and_roles.py
database/: README.md
tests/: README.md
(+294 files in other folders)
